@startuml

class Term {
    key:object
    description:string
    isMatching(Term[]):boolean
}

class Conditional<T> {
    value:T
    guards:enum[]
    get(conditions:enum[]):T?
}
Conditional .> Term:<T>

class LicenseType {
    identifier:string
    requiresGiven(conditions:enum[]):Term[]
    unmetDemands(LicenseType,conditions:enum[]):Term[]
}
LicenseType -u-> "0..1" LicenseType:parent
LicenseType --> "*" Term:accepts
LicenseType --> "*" Conditional:requires
LicenseType --> "*" Conditional:demands

@enduml
